// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features can be parsed and aliased: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "DataType",
          "children": [],
          "declaredName": "Integer",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Feature",
          "children": [],
          "declaredName": "person",
          "heritage": [
            {
              "$type": "FeatureTyping",
              "elements": [],
              "targetRef": {
                "$type": "TypeReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Classifier",
                      "children": [
                        {
                          "$type": "FeatureMembership",
                          "elements": [],
                          "target": {
                            "$type": "Feature",
                            "children": [],
                            "declaredName": "age",
                            "heritage": [
                              {
                                "$type": "FeatureTyping",
                                "elements": [],
                                "targetRef": {
                                  "$type": "TypeReference",
                                  "parts": [
                                    {
                                      "error": undefined,
                                      "ref": {
                                        "$type": "DataType",
                                        "children": [],
                                        "declaredName": "Integer",
                                        "heritage": [],
                                        "isSufficient": false,
                                        "prefixes": [],
                                        "typeRelationships": [],
                                      },
                                    },
                                  ],
                                },
                              },
                            ],
                            "isNonunique": false,
                            "isOrdered": false,
                            "isSufficient": false,
                            "multiplicity": {
                              "$type": "OwningMembership",
                              "elements": [],
                              "target": {
                                "$type": "MultiplicityRange",
                                "children": [],
                                "heritage": [],
                                "isNonunique": false,
                                "isOrdered": false,
                                "isSufficient": false,
                                "prefixes": [],
                                "range": {
                                  "$type": "OwningMembership",
                                  "elements": [],
                                  "target": {
                                    "$type": "LiteralNumber",
                                    "children": [],
                                    "heritage": [],
                                    "isNonunique": false,
                                    "isOrdered": false,
                                    "isSufficient": false,
                                    "literal": 1,
                                    "prefixes": [],
                                    "typeRelationships": [],
                                  },
                                },
                                "typeRelationships": [],
                              },
                            },
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                        {
                          "$type": "Membership",
                          "declaredName": "personAlias",
                          "elements": [],
                          "targetRef": {
                            "$type": "ElementReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": [Circular],
                              },
                            ],
                          },
                        },
                      ],
                      "declaredName": "Person",
                      "heritage": [],
                      "isSufficient": false,
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "isNonunique": false,
          "isOrdered": false,
          "isSufficient": false,
          "multiplicity": {
            "$type": "OwningMembership",
            "elements": [],
            "target": {
              "$type": "MultiplicityRange",
              "children": [],
              "heritage": [],
              "isNonunique": false,
              "isOrdered": false,
              "isSufficient": false,
              "prefixes": [],
              "range": {
                "$type": "OwningMembership",
                "elements": [],
                "target": {
                  "$type": "LiteralInfinity",
                  "children": [],
                  "heritage": [],
                  "isNonunique": false,
                  "isOrdered": false,
                  "isSufficient": false,
                  "prefixes": [],
                  "typeRelationships": [],
                },
              },
              "typeRelationships": [],
            },
          },
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Classifier",
          "children": [
            {
              "$type": "FeatureMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "age",
                "heritage": [
                  {
                    "$type": "FeatureTyping",
                    "elements": [],
                    "targetRef": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "DataType",
                            "children": [],
                            "declaredName": "Integer",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "multiplicity": {
                  "$type": "OwningMembership",
                  "elements": [],
                  "target": {
                    "$type": "MultiplicityRange",
                    "children": [],
                    "heritage": [],
                    "isNonunique": false,
                    "isOrdered": false,
                    "isSufficient": false,
                    "prefixes": [],
                    "range": {
                      "$type": "OwningMembership",
                      "elements": [],
                      "target": {
                        "$type": "LiteralNumber",
                        "children": [],
                        "heritage": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "literal": 1,
                        "prefixes": [],
                        "typeRelationships": [],
                      },
                    },
                    "typeRelationships": [],
                  },
                },
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "Membership",
              "declaredName": "personAlias",
              "elements": [],
              "targetRef": {
                "$type": "ElementReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Feature",
                      "children": [],
                      "declaredName": "person",
                      "heritage": [
                        {
                          "$type": "FeatureTyping",
                          "elements": [],
                          "targetRef": {
                            "$type": "TypeReference",
                            "parts": [
                              {
                                "error": undefined,
                                "ref": [Circular],
                              },
                            ],
                          },
                        },
                      ],
                      "isNonunique": false,
                      "isOrdered": false,
                      "isSufficient": false,
                      "multiplicity": {
                        "$type": "OwningMembership",
                        "elements": [],
                        "target": {
                          "$type": "MultiplicityRange",
                          "children": [],
                          "heritage": [],
                          "isNonunique": false,
                          "isOrdered": false,
                          "isSufficient": false,
                          "prefixes": [],
                          "range": {
                            "$type": "OwningMembership",
                            "elements": [],
                            "target": {
                              "$type": "LiteralInfinity",
                              "children": [],
                              "heritage": [],
                              "isNonunique": false,
                              "isOrdered": false,
                              "isSufficient": false,
                              "prefixes": [],
                              "typeRelationships": [],
                            },
                          },
                          "typeRelationships": [],
                        },
                      },
                      "prefixes": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
          "declaredName": "Person",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;

exports[`member features can be parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "children": [
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Classifier",
          "children": [],
          "declaredName": "A",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
      {
        "$type": "OwningMembership",
        "elements": [],
        "target": {
          "$type": "Classifier",
          "children": [
            {
              "$type": "FeatureMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "f",
                "heritage": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [],
              },
            },
            {
              "$type": "OwningMembership",
              "elements": [],
              "target": {
                "$type": "Feature",
                "children": [],
                "declaredName": "g",
                "heritage": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "prefixes": [],
                "typeRelationships": [
                  {
                    "$type": "TypeFeaturing",
                    "elements": [],
                    "targetRef": {
                      "$type": "TypeReference",
                      "parts": [
                        {
                          "error": undefined,
                          "ref": {
                            "$type": "Classifier",
                            "children": [],
                            "declaredName": "A",
                            "heritage": [],
                            "isSufficient": false,
                            "prefixes": [],
                            "typeRelationships": [],
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "declaredName": "B",
          "heritage": [],
          "isSufficient": false,
          "prefixes": [],
          "typeRelationships": [],
        },
      },
    ],
    "prefixes": [],
  },
}
`;
